--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,16 @@
 #
 #    pip-compile
 #
+numpy==1.23.4
+    # via pandas
+pandas==1.5.0
+    # via -r requirements.in
+python-dateutil==2.8.2
+    # via pandas
+pytz==2022.5
+    # via pandas
+six==1.16.0
+    # via python-dateutil
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
