--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,27 @@
 #
 #    pip-compile
 #
+joblib==1.2.0
+    # via scikit-learn
 numpy==1.23.4
-    # via pandas
+    # via
+    #   pandas
+    #   scikit-learn
+    #   scipy
 pandas==1.5.0
     # via -r requirements.in
 python-dateutil==2.8.2
     # via pandas
 pytz==2022.5
     # via pandas
+scikit-learn==1.1.3
+    # via -r requirements.in
+scipy==1.9.3
+    # via scikit-learn
 six==1.16.0
     # via python-dateutil
+threadpoolctl==3.1.0
+    # via scikit-learn
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
